screen 'jumping' has been fixed

--- a/src/app/components/slideshow/slideshow.scss
+++ b/src/app/components/slideshow/slideshow.scss
@@ -15,7 +15,7 @@
 .next {
   cursor: pointer;
   position: absolute;
-  z-index: 1;
+  z-index: 2;
   top: 50%;
   width: auto;
   margin-top: -22px;
