--- a/src/app/shared/header/main-menu/main-menu.scss
+++ b/src/app/shared/header/main-menu/main-menu.scss
@@ -5,7 +5,7 @@
   top: 0;
   z-index: 5;
   height: 60px;
-  background: $bgColorDark;
+  background: rgba($color: $bgColorDark, $alpha: 0.9);
   color: $fontColorLight;
 
   &__wrapper {
